--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,17 @@ a {
   justify-content: space-between;
   flex-direction: column;
 }
+
+.theme{
+  transition: .5s all ease-in-out;
+}
+
+.light{
+  background-color: #fff;
+  color: #111;
+}
+
+.dark{
+  background-color: #111;
+  color: #bbb;
+}
