--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -15,7 +15,8 @@
     justify-content: center;
     align-items: center;
     gap: 15px !important;
+    color: var(--color-secondary);
 }
 .links .link:hover{
-    color: yellow;
+    color: var(--color-primary);
 }
