--- a/src/elements/button/button.module.css
+++ b/src/elements/button/button.module.css
@@ -4,8 +4,9 @@
     border-radius: 5px;
     color: black;
     outline: none;
-    color: white;
     cursor: pointer;
     border: none;
-
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 700;
 }
